<resources>
    <string name="app_name">Term Tracker</string>
    <string name="enter">enter</string>
    <string name="logo_image">logo_image</string>
    <string name="notify_start_course">Notify Start</string>
    <string name="notify_end_course">Notify End</string>
    <string name="delete">Delete</string>
    <string name="refresh">Refresh</string>
    <string name="term_title">Term Title</string>
    <string name="start_date">Start Date</string>
    <string name="save">Save</string>
    <string name="end_date">End Date</string>
    <string name="course_title">Course Title</string>
    <string name="course_status">Course Status</string>
    <string name="course_note">Course Note</string>
    <string name="course_instructor_phone">Instructor Phone</string>
    <string name="course_instructor_name">Instructor Name</string>
    <string name="course_instructor_email">Instructor Email</string>
    <string name="assessment_title">Title</string>
    <string name="assessment_type">Type</string>
    <string name="share">Share</string>
    <string name="home">Terms</string>
    <string name="channel_description">Channel description</string>
    <string name="channel_name">Channel name</string>
    <string name="notify_start_assessment">Notify Start</string>
    <string name="notify_end_assessment">Notify End</string>
</resources>