<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.AssessmentActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="createNewAssessment"
        app:srcCompat="@drawable/ic_add_foreground"
        tools:layout_editor_absoluteX="339dp"
        tools:layout_editor_absoluteY="659dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp" />

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="729dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/course_title"/>
                <EditText
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:hint="Title"
                    android:id="@+id/courseTitle"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/start_date"/>
                <EditText
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:hint="MM/dd/yy"
                    android:id="@+id/courseStart"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/end_date"/>
                <EditText
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:hint="MM/dd/yy"
                    android:id="@+id/courseEnd"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/course_status"/>
                <EditText
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:hint="Status"
                    android:id="@+id/courseStatus"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/course_instructor_name"/>
                <EditText
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:hint="Name"
                    android:id="@+id/courseInstructorName"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/course_instructor_phone"/>
                <EditText
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:hint="###-###-####"
                    android:id="@+id/courseInstructorPhone"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/course_instructor_email"/>
                <EditText
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:hint="email@email.com"
                    android:id="@+id/courseInstructorEmail"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/course_note"/>
                <EditText
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:hint="Note about course."
                    android:id="@+id/courseNote"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">



            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Assessments in this Course:"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/assessmentsRecyclerView"
        app:layout_constraintLeft_toLeftOf="@+id/assessmentsRecyclerView"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/assessmentsRecyclerView"
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:background="@color/purple_200"
        android:layout_marginBottom="75dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="saveCourse"
        android:text="@string/save"
        app:layout_constraintBottom_toTopOf="@+id/assessmentsRecyclerView"
        app:layout_constraintEnd_toEndOf="@+id/assessmentsRecyclerView" />

</androidx.constraintlayout.widget.ConstraintLayout>