<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.AssessmentDetailsActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="409dp"
        android:layout_height="200dp"
        android:padding="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/assessment_title" />

                <EditText
                    android:id="@+id/assessmentTitle"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:hint="Title" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/start_date" />

                <EditText
                    android:id="@+id/assessmentStart"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:hint="01/01/21" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/end_date" />

                <EditText
                    android:id="@+id/assessmentEnd"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:hint="06/01/21" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/assessment_type" />

                <EditText
                    android:id="@+id/assessmentType"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:hint="Objective or Performance" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="saveAssessment"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="@+id/scrollView2"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
        android:layout_marginRight="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>