<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.CourseActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="createNewCourse"
        app:srcCompat="@drawable/ic_add_foreground"
        tools:layout_editor_absoluteX="339dp"
        tools:layout_editor_absoluteY="659dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp" />

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="160dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/term_title"/>
                <EditText
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:hint="Title"
                    android:id="@+id/termTitle"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/start_date"/>
                <EditText
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:hint="01/01/21"
                    android:id="@+id/termStart"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/end_date"/>
                <EditText
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:hint="06/01/21"
                    android:id="@+id/termEnd"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Courses in this Term:"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/coursesRecyclerView"
        app:layout_constraintLeft_toLeftOf="@+id/coursesRecyclerView"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/coursesRecyclerView"
        android:layout_width="400dp"
        android:layout_height="300dp"
        android:background="@color/purple_200"
        android:layout_marginBottom="75dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="saveTerm"
        android:text="@string/save"
        app:layout_constraintBottom_toTopOf="@+id/coursesRecyclerView"
        app:layout_constraintEnd_toEndOf="@+id/coursesRecyclerView" />

</androidx.constraintlayout.widget.ConstraintLayout>